<resources>
    <string name="app_name">Miami Beach Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Miami Beach Guide</string>
    <string name="login_text">Login To Facebook</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="log_out">Please click to log out</string>
    <string name="login_wfacebook">Click to log in with facebook</string>
    <string name="title_activity_geo_location">GeoLocation</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="checkin">Check-In</string>
    <string name="show_geolocation">Show Geolocation</string>
    <string name="title_activity_checkin">Checkin</string>
    <string name="title_activity_events">Events</string>
    <string name="events">Events</string>
    <string name="loading">Loading..</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="event_image">Event Image</string>
    <string name="events_map_button">Events Map</string>
    <string name="facebook_login_text">Login using your Facebook account</string>
    <string name="face_text">Login using Facebook a facebook account:</string>
    <string name="facebook_loginB">Login</string>
    <string name="login_text1">Login using MB Guide credentials:</string>
    <string name="mb_login">Login</string>
    <string name="places_Button">Places</string>
    <string name="title_activity_google_places">GooglePlaces</string>
    <string name="get_places">Get Places</string>
    <string name="title_activity_places">Places</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_search_radius">Search Radius</string>
    <string name="pref_upload_buckets_image">upload.buckets_image</string>
    <string name="pref_auto_scan_image">pref_auto_scan_image</string>
    <string name="menu_search">Search</string>
    <string name="category">Category</string>
    <string name="dates">Dates</string>
    <string name="search_radius">Search Radius</string>
    <string name="ok">OK</string>
    <string name="title_activity_place_details">Place Details</string>
    <string name="place_image">PlaceImage</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="title_activity_tour_activity_details">TourActivityDetails</string>
    <string name="previotour">Previus</string>
    <string name="nexttour">Next</string>
    <string name="tours">Tours</string>
    <string name="places">Find Places</string>
    <string name="empty_result">No Result</string>
    <string name="fcbk_login">Login</string>
    <string name="location">Location</string>
    <string name="events_tv">Find Events</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="delete_from_calendar">Delete from Calendar</string>
    <string name="my_events_tv">My Events</string>
    <string name="my_places">My Places</string>
    <string name="title_activity_my_events">MyEventsActivity</string>
    <string name="title_activity_my_places">MyPlacesActivity</string>
    <string name="empty_events">No Events</string>
    <string name="directions">Directions</string>
    <string name="navigation">Navigation</string>
    <string name="calendar">TODO</string>
    <string name="title_activity_personalization">Personalize your App!!!</string>
    <string name="interest_events_prompt">Select Your Events Interest</string>
    <string name="interest_places_prompt">Select Your Places Interest</string>
    <string name="empty_events">No Events</string>
    <string name="directions">Directions</string>
    <string name="navigation">Navigation</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_personalization">Personalize your App!!!</string>
    <string name="interest_events_prompt">Select Your Events Interest</string>
    <string name="interest_places_prompt">Select Your Places Interest</string>
    <string name="distance_prompt">Select Radius (Miles)</string>
    <string name="my_events_tv2">My Events</string>
    <string name="add_place">Add Place</string>
    <string name="personalization_submit_button">Submit</string>
    <string name="personalization_skip_button">Skip</string>
    <string name="interest_events_tv"> Select your events interest: </string>
    <string name="interest_places"> Select your places interest: </string>
    <string name="interest_radius"> Select the search radius: </string>
    <string name="interest_time"> Select the time period: </string>
    <string name="data_source">Data Source</string>
    <string name="miami_beach_api">Miami Beach</string>
    <string name="google_place_api">Google Places</string>
    <string name="eventful_api">Eventful</string>
    <string name="facebook_api">Facebook</string>
    <string name="sample_text">Sample Text</string>
    <string name="sample_image">Sample Image</string>
    <string name="place_suggestion">We think you may like these places</string>
    <string name="event_suggestion">We think you may like these events</string>
    <string name="fb_app_id">378790605525916</string>
    <string name="title_activity_fb_place_picker">Pick a Place</string>
    <string name="title_activity_fb_request">Sent Request</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="post">Post</string>
    <string name="invite">Invite</string>
    <string name="title_activity_fb_publish_feed">Publish Feed</string>
    <string name="share">Share</string>
    <string name="join_me">Join Me!!!</string>
    <string name="miami_beach">Miami Beach</string>
    <string name="join_invite">Would you like to join me at </string>
    <string name="select_place_first">Select a place first</string>
    <string name="write_message">Write a message!!</string>
    <string name="error_posting_request">Error posting request. Try Again Later!!!</string>
    <string name="tours">Tours</string>
    <string name="time_prompt">Select Time Period</string>
    <string name="title_activity_update_twitter_status">UpdateTwitterStatusActivity</string>
	<string name="post_tweet">Post Tweet</string>
	<string name="map_api_key">0f7bvw0dRHCH9_Amp0WBvAXmnY95nxeUVef3zHg</string>
	<string name="recomended_events">Recomended Events</string>
	<string name="recomended_places">Recomended Places</string>
</resources>