<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/add_to_calendar"
        android:orderInCategory="100"
        android:title="@string/add_to_calendar"        
        android:showAsAction="never" />
        
    <item android:id="@+id/delete_from_calendar"
        android:orderInCategory="100"
        android:title="@string/delete_from_calendar"        
        android:showAsAction="never" />
    
    <item android:id="@+id/invite_friends"
        android:orderInCategory="100"
        android:title="@string/invite"        
        android:showAsAction="never" />
    
    <item android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share"        
        android:showAsAction="never" />
</menu>
