<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:orientation="vertical" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:orientation="horizontal" >
	        
	        <ImageView
	            android:id="@+id/place_image"
	            android:layout_width="0dp"
	            android:layout_height="120dp"
	            android:layout_weight="0.4"
	            android:contentDescription="@string/place_image"
	            android:maxHeight="120dp"
	            android:scaleType="fitStart"
	            android:src="@drawable/main_icon" />
	        
	        <TextView
	            android:id="@+id/place_name"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:layout_weight="0.6" />
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/place_location"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/events" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp" >
		   
		    
		    <TextView
		        android:id="@+id/place_distance"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="10dp"
		        android:text="@string/places"
		        android:textColor="#f00"
		        android:textStyle="italic" />
	
		</LinearLayout>
		
	    <TextView
	        android:id="@+id/place_description"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/places" />
	    
	     <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@android:id/list"
	        android:layout_marginTop="10dp" >
		   
		    
		    <TextView
		        android:id="@android:id/empty"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="10dp"
		        android:text="@string/empty_events"
		        android:textColor="#f00"
		        android:textStyle="italic" />
	
		</LinearLayout>
	    
	    <com.google.android.maps.MapView
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/mapview"
	        android:layout_width="match_parent"
	        android:layout_height="200dp"
	        android:layout_margin="8dp"        
	        android:apiKey="0f7bvw0dRHCH9_Amp0WBvAXmnY95nxeUVef3zHg"
	        android:clickable="false" />
	    
	    
	   
	</LinearLayout>
</ScrollView>